# sqlfluff-templater-dataform-full

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
sqlfluff_templater_dataform_full/: __init__.py  templater.py
test/: .gitignore  conftest.py  settings_test.py  templater_test.py
test/fixtures/dataform/dataform_project/: workflow_settings.yaml
test/fixtures/dataform/dataform_project/definitions/: source_a.sqlx  source_b_c.js
test/fixtures/dataform/dataform_project/definitions/input/: assertion.sqlx  config_js_query.sqlx  config_query.sqlx  declaration.sqlx  incremental.sqlx  js_block_sandwich.sqlx  no_template.sqlx  pre_post_ops.sqlx  sql_block_comment_ignored.sqlx  sql_line_comment_ignored.sqlx  test_case.sqlx
test/fixtures/dataform/dataform_project/includes/: utils.js
test/fixtures/dataform/expected_output/: assertion.sql  config_js_query.sql  config_query.sql  declaration.sql  incremental.sql  js_block_sandwich.sql  no_template.sql  pre_post_ops.sql  sql_block_comment_ignored.sql  sql_line_comment_ignored.sql  templ.sql  test_case.sql
